<resources>
    <string name="app_name">Mestapp</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="or">or</string>
    <string name="signup">Sign up</string>
    <string name="email">Email</string>
    <string name="repeat_password">Repeat password</string>
    <string name="title_activity_chat_list">ChatListActivity</string>
    <string name="name_contact">Name contact</string>
    <string name="message_content">Message content</string>
    <string name="title_activity_chat">ChatActivity</string>
</resources>